--- a/style.css
+++ b/style.css
@@ -64,3 +64,12 @@ input {
 .list-group-item:last-child {
     margin-bottom: 10px;
 }
+
+.sub{
+    background-color: rgb(39, 39, 39);
+    color: white;
+    padding: 10px 0;
+    width: 100px;
+    border: 0px;
+    cursor: pointer;
+}
